--- a/conda/smace.yaml
+++ b/conda/smace.yaml
@@ -12,15 +12,17 @@ dependencies:
   # python
   - python >=3.9,<3.10
   - pip
-  # tests/qa
-  - flake8
-  - isort
-  - pytest >6.2.2
-  - nose
-  - coverage
+  # tests (not yet implemented)
+  #- pytest >6.2.2
+  #- nose
+  #- coverage
   - pip:
+      # qa
       - black
       - black[jupyter]
+      - flake8
+      - isort
+      # to run the example within the conda env
       - numpy ==1.20.3
       - pandas ==1.2.5
       - cvxpy ==1.1.15
