minimal info on how to build/distribute the package

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ classifiers =
     Programming Language :: Python :: 3
 
 [options]
-packages = find:
+packages = smace
 python_requires = >= 3.7
 zip_safe = False
 install_requires =
@@ -32,8 +32,3 @@ install_requires =
     xgboost==1.4.2
     scikit-learn==0.24.2
     scipy==1.7.1
-
-[options.packages.find]
-include =
-    smace
-    smace.*
